# lab

./: CLAUDE.md  README.md  mise.toml
.devcontainer/: devcontainer.json
ai-tools/: .gitignore  README.md  database.py  pyproject.toml  simple_categorization.py
bash/: README.md  args  casestatement  dot_config_info  fileordir  fileparts  fruitinfo  param_extension  passval  sysinfo
bicep/: readme.md
bicep-templates/: readme.md
bicep-templates/first-template/: main.bicep
docker/airflow-docker/: .gitignore  airflow-docker.md  docker-compose.yaml
docker/project-nessie/: docker-compose.yaml  project-nessie-pyiceberg.py  project-nessie.md  requirements.txt
kubernetes/: readme.md
kubernetes/1password/: 1password.md  first-1password-secret.yaml
kubernetes/airflow/: .gitignore  Dockerfile  README.md  values.yaml
kubernetes/deployments/: deploy-with-empty-dir-vol.yaml  first-deploy.yaml  recreate.yaml  rolling-update.yaml
kubernetes/helm/homepage/: values.yaml
kubernetes/homeassistant/: deployment.yaml  loadbalancer.yaml  storage.yaml
kubernetes/homepage/: loadbalancer.yaml  values.yaml
kubernetes/linkding/: deploy.yaml  service.yaml
kubernetes/mealie/: deploy.yaml  deployment.yaml
kubernetes/monitoring/: loadbalancer.yaml  values.yaml
orchestration-prefect/: README.md  fictional_pipeline.py  main.py  prefect_api.py  pyproject.toml
scripts/: setup
